# uad-reports

./: README.md
CMP204 Secure Web Development Coursework/cmp204/coursework/: LOGINDETAILS.txt  addEventsAttended.php  checkEventsAttended.php  checkLoginStatus.php  deleteEventsAttended.php  editEventsAttended.php  index.php  login.php  logout.php  processLogin.php  processRegistration.php  register.php  req.php  teamMembers.php  upcomingEvents.php  userProfile.php
CMP204 Secure Web Development Coursework/cmp204/coursework/css/: style.css
CMP204 Secure Web Development Coursework/cmp204/coursework/includes/: connectionString.php  footer.php  helper.php  nav.php
CMP204 Secure Web Development Coursework/cmp204/coursework/javascript/: script.js
diffie-hellman-rust/: Cargo.toml  exchange_capture.pcapng
diffie-hellman-rust/examples/: large_primes.rs  primitive_root_modulo.rs
diffie-hellman-rust/server/: server.js
diffie-hellman-rust/src/: lib.rs  main.rs
