[package]
name = "diffie-hellman-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
num-iter = "0.1.43"
num-prime = "0.4.3"
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
text_io = "0.1.12"
